--- a/src/components/product-list.astro
+++ b/src/components/product-list.astro
@@ -1,7 +1,7 @@
 ---
-import { getAllProducts } from "@lib/contentful";
+import { getAllProducts } from "@/lib/contentful";
 
-import Product from "@components/product.astro";
+import Product from "@/components/product.astro";
 import Section from "./ui/section.astro";
 
 const products = await getAllProducts();
@@ -9,15 +9,8 @@ const products = await getAllProducts();
 
 <Section sectionId="products" title="Produktai" mode="light">
   {
-    products.map(({ fields: { title, variants, features, slug } }) => {
-      return (
-        <Product
-          title={title}
-          variants={variants}
-          features={features}
-          slug={slug}
-        />
-      );
+    products.map((product) => {
+      return <Product product={product} />;
     })
   }
 </Section>
