--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "@layouts/layout.astro";
-import ProductList from "@components/product-list.astro";
-import About from "@components/about.astro";
+import Layout from "@/layouts/Layout.astro";
+import ProductList from "@/components/product-list.astro";
+import About from "@/components/about.astro";
 ---
 
 <Layout title="UAB Brameda">
