--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import Header from "@src/components/header.astro";
-import Contacts from "@src/components/contacts.astro";
-import Footer from "@src/components/footer.astro";
+import Header from "@/components/header.astro";
+import Contacts from "@/components/contacts.astro";
+import Footer from "@/components/footer.astro";
 
 interface Props {
   title: string;
@@ -19,6 +19,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="global.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -29,201 +30,3 @@ const { title } = Astro.props;
     <Footer />
   </body>
 </html>
-
-<style is:global>
-  /* ROOT */
-
-  @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
-  :root {
-    --max-width: 1200px;
-
-    --color-black: #000;
-    --color-white: #fff;
-    --color-grey-light: #ebebeb;
-    --color-grey-light2: #cbd2de;
-    --color-grey-dark: #606570;
-    --color-grey-dark2: #3a414e;
-    --color-divider: #ccc;
-    --color-danger: #ff4444;
-    --color-success: #03c851;
-
-    --scroll-transition: 0.2s all ease-out;
-
-    --default-spacing: 5rem;
-  }
-
-  *,
-  *::before,
-  ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-    font-family: inherit;
-  }
-
-  html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-    scrollbar-gutter: stable;
-
-    @media (prefers-reduced-motion: no-preference) {
-      scroll-behavior: smooth;
-    }
-  }
-
-  body {
-    font-family: "Roboto", sans-serif;
-    line-height: 1.5;
-    color: var(--color-grey-dark2);
-    background: var(--color-white);
-    overflow-x: hidden;
-  }
-
-  a,
-  button,
-  input,
-  textarea {
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  address {
-    all: unset;
-  }
-
-  /* UTILITY */
-
-  p {
-    color: var(--color-grey-dark);
-    font-size: 1.8rem;
-    font-weight: 400;
-  }
-
-  .scroll-lock {
-    overflow: hidden;
-  }
-
-  /* MEDIA QUERIES */
-
-  /* 800px */
-  @media only screen and (max-width: 50em) {
-    #main-nav button {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      justify-content: space-between;
-      position: relative;
-      z-index: 100;
-      width: 3.5rem;
-      height: 2.9rem;
-      padding: 0.5rem;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      outline: none;
-      transition: 0.2s all ease-out;
-    }
-
-    #main-nav button span,
-    #main-nav button::before,
-    #main-nav button::after {
-      content: "";
-      display: block;
-      height: 3px;
-      background: var(--color-grey-dark2);
-    }
-
-    #main-nav button.drawer-open {
-      transform: rotate(90deg);
-    }
-
-    #main-nav button.drawer-open::before {
-      background: var(--color-white);
-      transform: rotate(-45deg) translate(-5px, 6px);
-    }
-
-    #main-nav button.drawer-open span {
-      opacity: 0;
-    }
-
-    #main-nav button.drawer-open::after {
-      background: var(--color-white);
-      transform: rotate(45deg) translate(-5px, -6px);
-    }
-
-    #main-nav ul {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 50;
-      width: 100%;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.9);
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-
-      transform: translateX(100%);
-      transition: 0.3s transform ease-out;
-    }
-
-    #main-nav ul.drawer-open {
-      transform: translateX(0);
-    }
-
-    #main-nav ul li a:link,
-    #main-nav ul li a:visited {
-      color: var(--color-white);
-      font-size: 2.5rem;
-      font-weight: 400;
-      margin: 0;
-      padding: 1rem 3rem;
-    }
-
-    #main-nav ul li a:hover,
-    #main-nav ul li a:active {
-      border-bottom: 2px solid var(--color-white);
-    }
-
-    /* #products article {
-    flex-direction: column;
-  } */
-
-    #products article div:nth-child(2) {
-      padding-right: var(--default-spacing);
-    }
-
-    #about article {
-      flex-direction: column;
-    }
-
-    #about article div {
-      padding-top: var(--default-spacing);
-      border-top: 1px solid var(--color-divider);
-      margin-top: var(--default-spacing);
-    }
-
-    footer .container {
-      flex-direction: column;
-    }
-
-    footer p:last-child {
-      padding: 0.5rem 0 1rem 0;
-    }
-  }
-
-  /* 448px */
-  @media only screen and (max-width: 28em) {
-    html {
-      font-size: 56.25%;
-    }
-
-    #products article div:nth-child(2) {
-      padding: var(--default-spacing) 1rem;
-    }
-
-    #about article div p {
-      padding: 1rem 3rem;
-    }
-  }
-</style>
