--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,29 +1,23 @@
 ---
-import ProductPage from "@src/components/product-page.astro";
-import Layout from "@src/layouts/layout.astro";
+import ProductPage from "@/components/product-page.astro";
+import Layout from "@/layouts/Layout.astro";
 
-import { getAllProducts } from "@lib/contentful";
+import { getAllProducts } from "@/lib/contentful";
 
 export async function getStaticPaths() {
   const items = await getAllProducts();
 
   return items.map((item) => ({
     params: {
-      slug: item.fields.slug,
+      slug: item.slug,
     },
     props: {
-      contentTypeId: item.sys.contentType.sys.id,
-      title: item.fields.title,
-      variants: item.fields.variants,
-      description: item.fields.description,
-      specifications: item.fields.specifications as object,
-      embeddedYouTubeLink: item.fields.embeddedYouTubeLink,
+      product: item,
     },
   }));
 }
 ---
 
-<Layout title={Astro.props.title}>
-  <!-- @ts-expect-error -->
-  <ProductPage {...Astro.props} />
+<Layout title={Astro.props.product.title}>
+  <ProductPage product={Astro.props.product} />
 </Layout>
