--- a/public/global.css
+++ b/public/global.css
@@ -19,6 +19,8 @@
   --scroll-transition: 0.2s all ease-out;
 
   --default-spacing: 5rem;
+
+  --scroll-range-end: 105vh;
 }
 
 *,
@@ -45,7 +47,7 @@ body {
   line-height: 1.5;
   color: var(--color-grey-dark2);
   background: var(--color-white);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 a,
@@ -68,14 +70,14 @@ p {
 }
 
 .scroll-lock {
-  overflow: hidden;
+  overflow: clip;
 }
 
 /* MEDIA QUERIES */
 
 /* 800px */
 @media only screen and (max-width: 50em) {
-  #main-nav button {
+  /* #main-nav button {
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -151,7 +153,7 @@ p {
   #main-nav ul li a:hover,
   #main-nav ul li a:active {
     border-bottom: 2px solid var(--color-white);
-  }
+  } */
 
   /* #products article {
     flex-direction: column;
