--- a/src/components/contact-form.astro
+++ b/src/components/contact-form.astro
@@ -1,4 +1,5 @@
 ---
+import { WEB3FORMS_PUBLIC_ACCESS_KEY } from "astro:env/server";
 import Button from "./ui/button.astro";
 import SubmitAnimation from "./ui/submit-animation.astro";
 import TextAreaInput from "./ui/text-area-input.astro";
@@ -12,11 +13,7 @@ import TextInput from "./ui/text-input.astro";
   class="form"
   data-astro-reload
   novalidate>
-  <input
-    type="hidden"
-    name="access_key"
-    value={import.meta.env.WEB3FORMS_PUBLIC_ACCESS_KEY}
-  />
+  <input type="hidden" name="access_key" value={WEB3FORMS_PUBLIC_ACCESS_KEY} />
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <TextInput
     id="name"
