refactor product components: rename and reorganize files, update import paths, and adjust overflow properties

--- a/src/components/product/product-list.astro
+++ b/src/components/product/product-list.astro
@@ -1,8 +1,8 @@
 ---
 import { getAllProducts } from "@/lib/contentful";
 
-import Product from "@/components/product.astro";
-import Section from "./ui/section.astro";
+import Product from "@/components/product/product.astro";
+import Section from "../ui/section.astro";
 
 const products = await getAllProducts();
 ---
