--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -1,12 +1,12 @@
 ---
 import { Image } from "astro:assets";
 
-import Link from "./ui/link.astro";
-import Container from "./ui/container.astro";
-import Section from "./ui/section.astro";
+import Link from "../ui/link.astro";
+import Container from "../ui/container.astro";
+import Section from "../ui/section.astro";
 import type { ProductResponseType } from "@/types/contentful-types";
-import Price from "./ui/price.astro";
-import Select from "./ui/select.astro";
+import Price from "../ui/price.astro";
+import Select from "../ui/select.astro";
 import { urlFactory } from "@/utils/common";
 
 type Props = {
@@ -151,7 +151,7 @@ const mainImageSrc = urlFactory(
     border-radius: 15px;
     margin-bottom: 1.5rem;
     width: 100%; /* Adjust as needed */
-    overflow: hidden; /* Hides any overflow content */
+    overflow: clip; /* Hides any overflow content */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,7 +188,7 @@ const mainImageSrc = urlFactory(
     cursor: pointer;
     transition: background 0.2s ease-out;
     width: 100%;
-    overflow: hidden;
+    overflow: clip;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -251,7 +251,7 @@ const mainImageSrc = urlFactory(
     grid-area: video;
     margin-top: 5rem;
     border-radius: 15px;
-    overflow: hidden;
+    overflow: clip;
   }
 
   #product article .product__video iframe {
@@ -273,6 +273,7 @@ const mainImageSrc = urlFactory(
       grid-template-rows: auto;
       grid-template-areas:
         "title"
+        "price"
         "desc"
         "media"
         "specs"
