refactor component structure and improve markup: enhance HTML structure and formatting across various components for better readability and consistency

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -2,7 +2,7 @@
 import Section from "./ui/section.astro";
 ---
 
-<Section sectionId="about" title="Apie mus" mode="light">
+<Section mode="light" sectionId="about" title="Apie mus">
   <article>
     <p>
       1991 m. kovo mėn. 27 d. įkurta individuali A.Brazdžiaus įmonė. Įmonės
