--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,8 +14,8 @@ const currentYear = new Date().getFullYear();
         Sprendimas
         <a
           href="http://www.ricardas.io"
-          target="_blank"
-          rel="noopener noreferrer">ricardas.io</a
+          rel="noopener noreferrer"
+          target="_blank">ricardas.io</a
         >
       </p>
     </div>
