--- a/src/components/ui/branding.astro
+++ b/src/components/ui/branding.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<a href="/" class="branding">
+<a class="branding" href="/">
   <h1>
     Brameda<span>Pažangūs ergonominiai sprendimai jūsų verslui</span>
   </h1>
