--- a/src/components/ui/submit-animation.astro
+++ b/src/components/ui/submit-animation.astro
@@ -2,32 +2,32 @@
 
 ---
 
-<div id="submit-animation" class="wrapper-success">
+<div class="wrapper-success" id="submit-animation">
   <svg
     class="checkmark success"
-    xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 52 52"
-    ><circle class="checkmark_circle_success" cx="26" cy="26" r="25" fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    ><circle cy="26" class="checkmark_circle_success" cx="26" fill="none" r="25"
     ></circle><path
       class="checkmark_check"
-      fill="none"
       d="M14.1 27.2l7.1 7.2 16.7-16.8"
+      fill="none"
       stroke-linecap="round"></path></svg
   >
 </div>
 
-<div id="submit-animation" class="wrapper-error">
+<div class="wrapper-error" id="submit-animation">
   <svg
     class="checkmark error"
-    xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 52 52"
-    ><circle class="checkmark_circle_error" cx="26" cy="26" r="25" fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    ><circle cy="26" class="checkmark_circle_error" cx="26" fill="none" r="25"
     ></circle><path
       class="checkmark_check"
-      stroke-linecap="round"
-      fill="none"
       d="M16 16 36 36 M36 16 16 36
-"></path></svg
+"
+      fill="none"
+      stroke-linecap="round"></path></svg
   >
 </div>
 
