--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -14,10 +14,11 @@ const isExternal = linkType === "external";
 ---
 
 <a
-  href={href}
   class:list={["btn", { "btn-dark": variant === "dark" }]}
+  href={href}
+  rel={isExternal ? "noopener noreferrer" : ""}
   target={isExternal ? "_blank" : ""}
-  rel={isExternal ? "noopener noreferrer" : ""}>
+>
   <slot />
 </a>
 
