--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "@/components/header.astro";
 import Contacts from "@/components/contacts.astro";
 import Footer from "@/components/footer.astro";
+import About from "@/components/about.astro";
 
 interface Props {
   title: string;
@@ -15,17 +16,20 @@ const { title } = Astro.props;
   <head>
     <!-- TODO add meta info -->
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="global.css" />
-    <meta name="generator" content={Astro.generator} />
+    <meta content="Astro description" name="description" />
+    <meta content="width=device-width" name="viewport" />
+    <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
+    <link href="normalize.css" rel="stylesheet" />
+    <link href="global.css" rel="stylesheet" />
+    <meta content={Astro.generator} name="generator" />
     <title>{title}</title>
   </head>
   <body>
     <Header />
-    <slot />
+    <main id="main">
+      <slot />
+      <About />
+    </main>
     <Contacts />
     <Footer />
   </body>
