refactor(config): update image remote patterns and sitemap integration for improved handling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta content="Astro description" name="description" />
     <meta content="width=device-width" name="viewport" />
+    <link href="/sitemap-index.xml" rel="sitemap" />
     <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
     <link href="normalize.css" rel="stylesheet" />
     <link href="global.css" rel="stylesheet" />
