refactor(types): update imports to use transformed types for improved clarity and consistency

--- a/src/components/product/product-item.astro
+++ b/src/components/product/product-item.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import Link from "../ui/link.astro";
 
-import type { Product } from "@/schemas/contentful";
+import type { Product } from "@/schemas/contentful-transformed.types";
 
 type Props = {
   product: Product;
