--- a/src/components/ui/select.astro
+++ b/src/components/ui/select.astro
@@ -1,5 +1,5 @@
 ---
-import type { ProductVariant } from "@/schemas/contentful";
+import type { ProductVariant } from "@/schemas/contentful-transformed.types";
 
 type Props = {
   label?: string;
