--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -6,7 +6,7 @@ import Container from "../ui/container.astro";
 import Section from "../ui/section.astro";
 import Price from "../ui/price.astro";
 import Select from "../ui/select.astro";
-import type { Product } from "@/schemas/contentful";
+import type { Product } from "@/schemas/contentful-transformed.types";
 
 type Props = {
   product: Product;
