--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -25,6 +25,16 @@ const {
 } = product;
 
 const mainPhotoSrc = mainPhoto.url;
+
+// At the top of your component script
+const allVariantPhotos = variants.flatMap(
+  (variant) =>
+    variant.photos?.map((photo) => ({
+      url: photo.url,
+      alt: `${title} - ${variant.color}`,
+      color: variant.color,
+    })) ?? []
+);
 ---
 
 <main id="main">
@@ -46,19 +56,17 @@ const mainPhotoSrc = mainPhoto.url;
 
             <ul class="product__thumbs">
               {
-                variants.map((variant) =>
-                  variant.photos?.map((photo) => (
-                    <li class="product__thumbs__img-container">
-                      <Image
-                        alt={`${title} - ${variant.color}`}
-                        class="product__thumbs__img"
-                        data-color={variant.color}
-                        inferSize
-                        src={photo.url}
-                      />
-                    </li>
-                  ))
-                )
+                allVariantPhotos.map((photo) => (
+                  <li class="product__thumbs__img-container">
+                    <Image
+                      alt={photo.alt}
+                      class="product__thumbs__img"
+                      data-color={photo.color}
+                      inferSize
+                      src={photo.url}
+                    />
+                  </li>
+                ))
               }
             </ul>
 
